feat: improve data mocking
